--- a/main.html
+++ b/main.html
@@ -7,6 +7,40 @@
 </head>
 
 <body>
+	<table>
+        <caption>Item Cart</caption>
+        <thead>
+            <tr>
+                <th>Item</th>
+                <th>Price</th>
+                <th>Quantity</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Banana</td>
+                <td>₹1.00</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>Burger</td>
+                <td>₹6.90</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>Cookie</td>
+                <td>₹4.20</td>
+                <td>4</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>Total</th>
+                <th>₹12.10</th>
+                <th>8</th>
+            </tr>
+        </tfoot>
+    </table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
