--- a/main.html
+++ b/main.html
@@ -35,12 +35,13 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total</th>
-                <th>₹12.10</th>
-                <th>8</th>
+                <td><strong>Total</strong></td>
+                <td><strong>₹12.10</strong></td>
+                <td><strong>8</strong></td>
             </tr>
         </tfoot>
     </table>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
